--- a/symfony/assets/css/commun.scss
+++ b/symfony/assets/css/commun.scss
@@ -11,3 +11,4 @@ $border-width:1px;
 $btn-border-radius:.25rem;
  */
 @import "~bootstrap/scss/bootstrap";
+@import "~flag-icon-css/sass/flag-icon";
